Finishing the scaleZ/scale3d section. Fixing a layering bug in the demo.

--- a/3d-transforms-scale3d.html
+++ b/3d-transforms-scale3d.html
@@ -22,6 +22,9 @@
 		   -moz-transform-style: preserve-3d;
 			-ms-transform-style: preserve-3d;
 				transform-style: preserve-3d;
+				
+				position:relative;
+				z-index:2;
  	}
  	
  	#wrap{
@@ -77,10 +80,10 @@
 	header,form{
 		background: rgba(255,255,255,.9);
 		position:relative;
-		z-index:9999;
 	}
 	form{	
 		width:inherit;
+		z-index:9999;
 	}
 	form p{
 		display:inline-block;
