--- a/_index.html
+++ b/_index.html
@@ -516,9 +516,20 @@
 
 <p>What's going on? Here too, this has to do with the way the <a href="http://www.w3.org/TR/css3-transforms/#Rotate3dDefined"><code>rotate3d</code> matrix</a>, is calculated. Using the same number for the x, y, and z, values results in virtually the same matrix regardless of what that number is. Should you change one (or two) of those values, however, it results in a different matrix. By manipulating each value in the <a href="3d-transforms-rotate3d.html"><code>rotate3d()</code></a> demo, you can get a sense of how they interplay.</p>
 
-<h2>Conclusion</h2>
+<h2>Learn More</h2>
 
-<p>I hope I've cleared up how transforms work without throwing too much linear algebra and geometry at you. </p>
+<p>I hope I've cleared up how three-dimensional transforms work without throwing too much linear algebra and geometry at you. Understanding the underlying math goes a long way toward understanding how transforms work and where they might go wrong. I found the following resources helpful.</p>
+
+<ul>
+	<li><a href="http://dev.w3.org/csswg/css3-transforms/">CSS Transforms</a> specification from the World Wide Web Consortium</li>
+	<li><a href="http://en.wikipedia.org/wiki/Transformation_matrix">Transformation matrix</a> from Wikipedia</li>
+	<li><a href="http://en.wikipedia.org/wiki/Affine_transformations">Affine transformation</a>, also from Wikipedia</li>
+	<li><a href="http://www.cs.mtu.edu/~shene/COURSES/cs3621/NOTES/geometry/geo-tran.html">Geometric Transformations</a> by Dr. Ching-Kuang Shene of Michigan Technological University</li>
+</ul>
+
+
+
+
 
 
 </html>
