--- a/_index.html
+++ b/_index.html
@@ -443,7 +443,16 @@
 
 <p>Our matrix product values are then used as arguments for the <code>matrix3d()</code> function. We could use <code>transform: matrix3d(2, 0, 0, 0, 0, 3, 0, 0, 0, 0, 3, -0.015, 0, 0, 0, 1)</code> instead of <code>transform: scale3d(2,3,3) perspective(200px)</code>. <a href="http://dev.opera.com/articles/view/understanding-the-css-transforms-matrix/">Understanding the CSS Transforms Matrix</a> covers this in a bit more depth.</p>
 
-<p>It's probably a good time to mention that <strong>order matters</strong> when dealing with transform functions: <code>transform: perspective(200px) scale3d(2,3,3)</code> renders slightly differently than <code>transform: scale3d(2,3,3) perspective(200px)</code>. Why? Because matrices, when multiplied, are not <a href="http://en.wikipedia.org/wiki/Commutative">commutative</a>. Changing the order of the matrices results in a different matrix product, and therefore a different transform.</p>
+<p><strong>Order matters</strong> when dealing with transform functions: <code>transform: perspective(200px) scale3d(2,3,3)</code> renders slightly differently than <code>transform: scale3d(2,3,3) perspective(200px)</code>. Why? Because matrices, when multiplied, are not <a href="http://en.wikipedia.org/wiki/Commutative">commutative</a>. Changing the order of the matrices results in a different matrix product, and therefore a different transform matrix.</p>
+
+<p>We can see how this works by using <code>getComputedStyle()</code> and <code>getPropertyValue()</code>. These functions will return the equivalent matrix for all transform functions applied to an object, as shown below.</p>
+
+<pre>var obj, matrix;
+obj = document.getElementById('my_element');
+matrix = getComputedStyle(obj).getPropertyValue('transform');
+console.log(matrix); // outputs either the matrix() or matrix3d() equivalent</pre>
+
+<p>Be aware, however, that this only retrieves the computed value for a single element. It <em>does not</em> tell you the whether its parent element has been transformed.</p>
 
 <p>Since using <code>matrix3d()</code> can make your CSS more obtuse than necessary, it's best to stick to the transform functions. I'll assume you're already familiar with two-dimensional transforms. For the rest of this article, we'll focus exclusively on 3D transform functions. if you need a primer on 2D transforms, read <a href="http://dev.opera.com/articles/view/css3-transitions-and-2d-transforms/">CSS3 transitions and 2D transforms</a>, our previous article on the subject.</p>
 
@@ -469,14 +478,14 @@
 <figcaption>Figure 11: We're multiplying a 3D scaling matrix &#8212; the equivalent of <code>scaleZ(3)</code> by the coordinates of a point at (100,200,0).</figcaption>
 </figure>
 
-<p>In order to see a visual effect of scaling along the z-axis, the product of our transform matrix and our object's vertices must result in a z value other than zero. Typically this occurs when we use a list of transform functions, and/or nest transformed objects. In <a href="#rotateYscaleZ">Figure 12</a>, we're finding the cumulative transform matrix for <code>transform: scaleZ(10) rotateY(20deg)</code> (which is equivalent to <code>transform: scale3d(1,1,10) rotateY(20deg)</code>).
+<p>In order to see a visual effect of scaling along the z-axis, the product of our transform matrix and our object's vertices must result in a z value other than zero. Typically this occurs when we use multiple transform functions, and/or nest transformed objects. In <a href="#rotateYscaleZ">Figure 12</a>, we're finding the cumulative transform matrix for <code>transform: scaleZ(10) rotateY(20deg)</code> (which is equivalent to <code>transform: scale3d(1,1,10) rotateY(20deg)</code>).
 
 <figure id="rotateYscaleZ">
 	<img src="3d-transforms-rotateY-scaleZ.gif" alt="Finding the matrix product of a y-axis rotation and a z-axis scaling transform">
 	<figcaption>Figure 12: Multiplying the matrix for a 20 degree rotation along the y axis by the matrix for a scale along the Z axis.</figcaption>
 </figure>
 
-<p>Now, if we multiply this new matrix transform by the coordinates of a point located at (100,200,0), we can see that we now have a z value. The transformed coordinates of our point is (94,200,34).
+<p>Now, if we multiply this new matrix transform by the coordinates of a point located at (100,200,0), we can see that we now have a z value that's greater than zero. The transformed coordinates of our point is (94,200,34).
 
 <figure id="rotateYscaleZ">
 	<img src="3d-transforms-Zmorethan0.gif" alt="Finding the matrix product of a y-axis rotation and a z-axis scaling transform">
@@ -484,7 +493,7 @@
 </figure>
 </div> 
 
-<p>As with two-dimensional scaling, positive numbers greater than 1 increase the values (CHRIS - POSITION?) along the z axis. Positive numbers that are greater than zero but less than 1 will decrease them. Negative values for scaling along the z axis will cause the object to appear flipped or mirrored. Get a sense of how these values interact in the <a href="3d-transforms-scale3d.html">3d scaling demo</a>.</p>
+<p>As with two-dimensional scaling, positive numbers greater than 1 increase the value of the z-coordinate. Positive numbers that are greater than zero but less than 1 will decrease them. Negative values for scaling along the z axis will cause the object to appear flipped or mirrored. You can get a sense of how these values interact in the <a href="3d-transforms-scale3d.html">3d scaling demo</a>.</p>
 
 <h3 id="rotating">Rotating objects with <code>rotateX()</code>, <code>rotateY()</code> and <code>rotateZ()</code> and <code>rotate3d()</code></h3>
 
@@ -495,7 +504,7 @@
 <figcaption>Figure 13: Using <code>rotateX()</code> to tilt objects.</figcaption>
 </figure>
 
-<p>The z-axis sits perpendicular to the screen plane. Rotations using <code>rotateZ()</code> are like those of a pinwheel or the hands of an analog clock (<a href="#rotatez">Figure 14</a>), behaving exactly like the 2D <code>rotate()</code> transform function. In effect, they are aliases. If you are only rotating around the z-axis, <code>rotate()</code> offers the broadest compatibility with older browsers. You can see how each of these functions work in this <a href="3d-transforms-rotateXYZ.html">3D rotation demo</a>.</p>
+<p>Rotations using <code>rotateZ()</code> are like those of a pinwheel or the hands of an analog clock (<a href="#rotatez">Figure 14</a>). They spin around the z-axis, behaving exactly like the 2D <code>rotate()</code> transform function. In fact, <code>rotateZ()</code> and <code>rotate()</code> are aliases. If you are only rotating around the z-axis, <code>rotate()</code> offers the broadest compatibility with older browsers. You can see how each of these functions work in this <a href="3d-transforms-rotateXYZ.html">3D rotation demo</a>.</p>
 
 <figure id="rotatez">
 <img src="3d-transforms-rotateZ.png">
@@ -504,18 +513,25 @@
 
 <p>Each of these functions accept a CSS angle as an argument. Valid values may be degrees (e.g. <code>45deg</code>), radians (e.g. <code>.21rad</code>), gradians (e.g. <code>100grad</code>), or turns (e.g. <code>.25turn</code>). Units are defined in the <a href="http://www.w3.org/TR/css3-values/#angles">angles section</a> of the CSS Values and Units Module Level 3 specification.</p>
 
-<p><code>rotate3d()</code> is a bit more complicated. It accepts four parameters, the first three being numbers, either positive or negative, which form an [x,y,z] direction vector (CHRIS - YOU SHOULD EXPLAIN THAT THESE WORK AS PROPORTION VALUES RELATIVE TO ONE ANOTHER). The fourth parameter determines the angle of rotation in the direction specified by the vector. Again, angles may be degrees, radians, gradians, or turns.</p>
+<p><code>rotate3d()</code> is a bit more complicated. It accepts four parameters. The first three must be numbers, either positive or negative. They form an [x,y,z] direction vector. The fourth parameter must be an angle, and determines the angle of rotation in the direction specified by the vector.</p>
 
 <figure id="rotate3d">
 <img src="3d-transforms-rotate3d.png">
 <figcaption>Figure 15: Rotating around two axes using  <code>rotate3d(1,1,0,45deg)</code>.</figcaption>
 </figure>
 
-<p>In <a href="#rotate3d">Figure 15</a>, we've tilted these objects by 45 degrees along both the x and y axes. This is actually the equivalent of <code>transform: rotateX(45deg) rotateY(45deg)</code>. Similarly, <code>rotate3d(0,0,1,45deg)</code> is equivalent to <code>rotateZ(45deg)</code> and <code>rotate(45deg)</code>. Of course, adjusting the x, y, or z value adjusts the rotation along that axis. Numbers may be positive or negative, but keep in mind that larger numbers do not necessarily create a more exaggerated rotation.</p>
+<p>In <a href="#rotate3d">Figure 15</a>, we've tilted these objects by 45 degrees along both the x and y axes. This is actually the equivalent of <code>transform: rotateX(45deg) rotateY(45deg)</code>. Similarly, <code>rotate3d(0,0,1,45deg)</code> is equivalent to <code>rotateZ(45deg)</code> and <code>rotate(45deg)</code>.</p> 
 
-<p>For example, <code>rotate3d(1,100,1,45deg)</code> rotates the object more severely around the y axis than around either the x or z axes. But increasing the y value to 1000 won't create a significantly more severe rotation than a value of 100. Similarly, whenever the x, y, and z values are the same the effect is about what you'd get if each value were 1. Using <code>rotate3d(22,22,22,45deg)</code> or  <code>rotate3d(198,198,198,45deg)</code> produces the same visual effect as <code>rotate3d(1,1,1,45deg)</code>. (CHRIS - YEAH, SO PROPORTION VALUES. I THINK YOU SHOULD TRY TO SIMPLY THIS EXPLANATION A BIT.)</p>
 
-<p>What's going on? Here too, this has to do with the way the <a href="http://www.w3.org/TR/css3-transforms/#Rotate3dDefined"><code>rotate3d</code> matrix</a> is calculated. Using the same number for the x, y, and z, values results in virtually the same matrix regardless of what that number is. Should you change one (or two) of those values, however, it results in a different matrix. By manipulating each value in the <a href="3d-transforms-rotate3d.html"><code>rotate3d()</code></a> demo, you can get a sense of how they interplay.</p>
+<div class="note">
+<p>Here's the catch: larger numbers do not necessarily create a more exaggerated rotation. The resulting transform is, as with all transforms, rendered based on the product of the transform matrix and the coordinate vector.</p>
+
+<!-- <p>Using the same number for the x, y, and z, values results in virtually the same matrix regardless of what that number is. Should you change one (or two) of those values, however, it results in a different matrix. By manipulating each value in the <a href="3d-transforms-rotate3d.html"><code>rotate3d()</code></a> demo, you can get a sense of how they interplay.</p> 00>
+</div>
+
+
+<!-- <p>For example, <code>rotate3d(1,100,1,45deg)</code> rotates the object more severely around the y axis than around either the x or z axes. But increasing the y value to 1000 won't create a significantly more severe rotation than a value of 100. Similarly, whenever the x, y, and z values are the same the effect is about what you'd get if each value were 1. Using <code>rotate3d(22,22,22,45deg)</code> or  <code>rotate3d(198,198,198,45deg)</code> produces the same visual effect as <code>rotate3d(1,1,1,45deg)</code>. (CHRIS - YEAH, SO PROPORTION VALUES. I THINK YOU SHOULD TRY TO SIMPLY THIS EXPLANATION A BIT.)</p> -->
+
 
 <h2>Learn More</h2>
 
