--- a/_index.html
+++ b/_index.html
@@ -286,12 +286,7 @@
 &lt;/body&gt;
 &lt;/html&gt;</code></pre>
 
-<pre><code>
-</code></pre>
-
 <p class="note"><b>Note:</b> Here we are using un-prefixed versions of these properties. Some browsers and browser versions still require a prefix.</p>
-
-
 
 <p>You've probably noticed that we applied our <code>perspective</code> property to <code>#stage</code> rather than to its child elements. That's because <code>perspective</code> sets the stage, so to speak, for the transforms applied to its children (<a href="#perspective1">Figure 3</a>). Without the <code>perspective</code> property, your transforms may appear flat and two-dimensional (<a href="3d-transforms-perspective.html">view a demo</a>).</p>
 </p>
@@ -301,7 +296,7 @@
 <figcaption>Figure 3: An example of a 3D rotation transform with the <code>perspective</code> property applied.</figcaption>
 </figure>
 
-<p>The <code>perspective</code> property sets the perceived distance between the viewer and the objects we&#8217;re transforming. Its value must be either <code>none</code>, or a positive length such as 300, 500px or 10rem. Lower values increase the amount of foreshortening while higher values decrease it (<a href="3d-transforms-perspective-change.html">view a perspective change demo demo</a>).</p>
+<p>The <code>perspective</code> property sets the perceived distance between the viewer and the objects we&#8217;re transforming. Its value must be either <code>none</code>, or a positive length such as 300, 500px or 10rem. Lower values increase the amount of foreshortening while higher values decrease it (<a href="3d-transforms-perspective-change.html">view a perspective change demo</a>).</p>
 
 <p>Setting the value of the <code>perspective</code> property to something other than <code>none</code> creates a <strong>containing block</strong>: absolutely-positioned child elements will be offset relative to the transformed object, rather than the document root. The effect is similar to that of <code>position: relative</code> (<a href="3d-transforms-containing.html">view a 3D transforms containing demo</a>). Setting a value for the <code>perspective</code> property also creates a <strong><a href="http://www.w3.org/TR/CSS2/zindex.html">stacking context</a></strong>. Transformed items may intersect with or overlap non-transformed objects on screen unless the z-index for each object is explicitly set.</p>
 
@@ -365,20 +360,20 @@
 
 <figure id="backfacevis">
 <img src="3d-transforms-backface.png">
-<figcaption>Figure 6: The card on the left has a <code>backface-visibility</code> of <code>visible</code> while the one on the right has a value of <code>hidden</code>.</figcaption>
+<figcaption>Figure 5: The card on the left has a <code>backface-visibility</code> of <code>visible</code> while the one on the right has a value of <code>hidden</code>.</figcaption>
 </figure>
 
-<p>In <a href="#backfacevis">Figure 6</a> above, the background color for both cards is transparent. The only difference between the two is that card on the left has a <code>backface-visibility</code> value of <code>visible</code>, while the card on the right has a <code>backface-visibility</code> value of <code>hidden</code> (<a href="3d-transforms-backface.html">view the <code>backface-visibility</code> demo</a>).</p> 
+<p>In <a href="#backfacevis">Figure 5</a> above, the background color for both cards is transparent. The only difference between the two is that card on the left has a <code>backface-visibility</code> value of <code>visible</code>, while the card on the right has a <code>backface-visibility</code> value of <code>hidden</code> (<a href="3d-transforms-backface.html">view the <code>backface-visibility</code> demo</a>).</p> 
 
 <h4 id="transstyle">Setting a <code>transform-style</code></h4>
 
 <p>As with a paper drawing, three-dimensional transforms map three dimensions of coordinates into the two dimensions of a screen. By default, transformed objects behave as a single plane. However, we can mimic multi-sided objects by using the <code>transform-style</code> property. Valid values for the <code>transform-style</code> property are <code>flat</code> and <code>preserve-3d</code>. The default is <code>flat</code>.</p>
 
-<p>In <a href="#transformstyle">figure 5</a> below, we have two cards with the same markup and largely the same CSS. However, for the left card, the value of the <code>transform-style</code> property is <code>flat</code>. For the right card, the value is <code>preserve-3d</code>. If we flip them over, as shown in our <a href="3d-transforms-transform-style.html">3D transform-style demo</a>, we can see that the left card appears to be a flattened plane. We can, however, see the other side of the card on the right.</p>
+<p>In <a href="#transformstyle">figure 6</a> below, we have two cards with the same markup and largely the same CSS. However, for the left card, the value of the <code>transform-style</code> property is <code>flat</code>. For the right card, the value is <code>preserve-3d</code>. If we flip them over, as shown in our <a href="3d-transforms-transform-style.html">3D transform-style demo</a>, we can see that the left card appears to be a flattened plane. We can, however, see the other side of the card on the right.</p>
 
 <figure id="transformstyle">
 <img src="3d-transforms-transstyle.png">
-<figcaption>Figure 5: The card on the left has a <code>transform-style</code> of <code>flat</code> while the one on the right has a value of <code>preserve-3d</code>. (CHRIS - IN THIS DEMO, I'VE CHANGED THE DURATION FORM 5S TO 1S - THE DEMO WAS A BIT TOO SLOW, IMO. ALSO, IT WOULD BE MORE EFFECTIVE TO DEMONSTRATE THIS BY SHOWING TWO CARDS, SEPARATED IN 3D SPACE USING TRANSLATEZ AND A BIT OF SKEW, SO THAT YOU CAN SEE THE DIFFERENT POSITION IN 3D SPACE, WHICH IS BROKEN IF TRANSFORM-STYLE IS FLAT.)</figcaption>
+<figcaption>Figure 6: The card on the left has a <code>transform-style</code> of <code>flat</code> while the one on the right has a value of <code>preserve-3d</code>. (CHRIS - ALSO, IT WOULD BE MORE EFFECTIVE TO DEMONSTRATE THIS BY SHOWING TWO CARDS, SEPARATED IN 3D SPACE USING TRANSLATEZ AND A BIT OF SKEW, SO THAT YOU CAN SEE THE DIFFERENT POSITION IN 3D SPACE, WHICH IS BROKEN IF TRANSFORM-STYLE IS FLAT.)</figcaption>
 </figure>
 
 <p>Using <code>transform-style: preserve-3d</code> also establishes a stacking context, but a few CSS properties and values can override its behavior. As required by their respective specifications, the following properties and values require the user agent to create a flattened representation of child elements before they can be applied.</p>
@@ -448,10 +443,10 @@
 
 <p>We can see how this works by using <code>getComputedStyle()</code> and <code>getPropertyValue()</code>. These functions will return the equivalent matrix for all transform functions applied to an object, as shown below.</p>
 
-<pre>var obj, matrix;
+<pre><code>var obj, matrix;
 obj = document.getElementById('my_element');
 matrix = getComputedStyle(obj).getPropertyValue('transform');
-console.log(matrix);</pre>
+console.log(matrix);</code></pre>
 
 <p>If the transform applied is <code>perspective(200px) scale3d(2,3,3)</code>, the equivalent matrix is <code>matrix3d(2, 0, 0, 0, 0, 3, 0, 0, 0, 0, 3, -0.015, 0, 0, 0, 1)</code>. Let's flip the order, so that the transform is <code>scale3d(2,3,3) perspective(200px)</code> instead. Then our equivalent, computed matrix is <code>matrix3d(2, 0, 0, 0, 0, 3, 0, 0, 0, 0, 3, -0.005, 0, 0, 0, 1)</code>.</p>
 
@@ -463,9 +458,9 @@ console.log(matrix);</pre>
 
 <p>Translation transforms offset the rendering position of an object by the distance provided. You may already be familiar with the <code>translateX()</code>, <code>translateY()</code>, and <code>translate()</code> functions. These functions translate objects along the x-axis, y-axis, or both in the case of <code>translate()</code>. With 3D transforms, we now have two more translation functions at our disposal: <strong><code>translateZ()</code></strong> and <strong><code>translate3d()</code></strong>.</p>
 
-<p>As its name suggests, <strong><code>translateZ()</code></strong> causes an object to be offset by the specified distance along the z-axis. The z-axis, of course, is an imaginary line that sits perpendicular to the plane of the screen. Translating along the z-axis affects the perception of distance (<a href="3d-transforms-transZ.html">view our translateZ demo</a>). Positive lengths appear closer to the viewer (and objects are larger). Negative lengths appear to be farther away (and objects are smaller).</p>
+<p>As its name suggests, <strong><code>translateZ()</code></strong> causes an object to be offset by the specified distance along the z-axis. The z-axis, of course, is an imaginary line that sits perpendicular to the plane of the screen. Translating along the z-axis affects the perception of distance (<a href="3d-transforms-transZ.html">view the translateZ demo</a>). Positive lengths appear closer to the viewer (and objects are larger). Negative lengths appear to be farther away (and objects are smaller).</p>
 
-<p>The <strong><code>translate3d()</code></strong> function works similarly, but accepts three arguments: an x-offset, a y-offset, and a z-offset value. It's a more succinct way to translate an object along all three axes. A transform value of <code>translate3d(200px,300px,-400px)</code>, for example, is the equivalent of <code>transform: translateX(200px) translateY(300px) translateZ(-400px)</code>.
+<p><strong><code>translate3d()</code></strong> works similarly, but accepts three arguments: an x-offset, a y-offset, and a z-offset value. It's a more succinct way to translate an object along all three axes. A transform value of <code>translate3d(200px,300px,-400px)</code>, for example, is the equivalent of <code>transform: translateX(200px) translateY(300px) translateZ(-400px)</code>.
 
 <h3 id="scaling">Scaling objects with <code>scale3d()</code> and <code>scaleZ()</code></h3>
 
@@ -473,9 +468,9 @@ console.log(matrix);</pre>
  
 <p>Scaling along the z-axis can be a bit tricky to understand at first. As with all transforms, it has to do with matrix and vector multiplication.</p>
 
-<p>Whenever we apply a transform, the browser multiplies the transform matrix by the coordinates for each of the object's vertices. This product determines where and whether the transformed object will be rendered. (Remember, if the coordinates exceed the dimensions of the viewport, the object won't be rendered.)</p>
+<p>Whenever we apply a transform, the browser multiplies the transform matrix by the coordinates for each of the object's points. This product determines where and whether the transformed object will be rendered. (Remember, if the coordinates exceed the dimensions of the viewport, the object won't be rendered.)</p>
 
-<p>In most cases, when we transform our objects, our point on the z-axis is 0. When we apply a z-axis scaling transform to our object, <a href="#findingscalezcoordinates">as shown in Figure 11</a>, our value for the z-coordinate remains zero.</p> 
+<p>In most cases, when we transform our objects, our z-coordinate is 0. When we apply a z-axis scaling transform to our object, <a href="#findingscalezcoordinates">as shown in Figure 11</a>, our z-coordinate remains zero.</p> 
 
 <figure id="findingscalezcoordinates"><img src="3d-transforms-scalezmatrix.gif">
 <figcaption>Figure 11: We're multiplying a 3D scaling matrix &#8212; the equivalent of <code>scaleZ(3)</code> by the coordinates of a point at (100,200,0).</figcaption>
@@ -516,7 +511,7 @@ console.log(matrix);</pre>
 
 <p>Each of these functions accept a CSS angle as an argument. Valid values may be degrees (e.g. <code>45deg</code>), radians (e.g. <code>.21rad</code>), gradians (e.g. <code>100grad</code>), or turns (e.g. <code>.25turn</code>). Units are defined in the <a href="http://www.w3.org/TR/css3-values/#angles">angles section</a> of the CSS Values and Units Module Level 3 specification.</p>
 
-<p><code>rotate3d()</code> is a bit more complicated. It accepts four parameters. The first three must be numbers, either positive or negative. They form an [x,y,z] direction vector. The fourth parameter must be an angle, and determines the angle of rotation in the direction specified by the vector.</p>
+<p><code>rotate3d()</code> is a bit more complicated. It accepts four parameters. The first three must be numbers, either positive or negative. Together they form an [x,y,z] direction vector. The fourth parameter must be an angle, and determines the angle of rotation in the direction specified by the vector.</p>
 
 <figure id="rotate3d">
 <img src="3d-transforms-rotate3d.png">
@@ -525,23 +520,17 @@ console.log(matrix);</pre>
 
 <p>In <a href="#rotate3d">Figure 15</a>, we've tilted these objects by 45 degrees along both the x and y axes. This is actually the equivalent of <code>transform: rotateX(45deg) rotateY(45deg)</code>. Similarly, <code>rotate3d(0,0,1,45deg)</code> is equivalent to <code>rotateZ(45deg)</code> and <code>rotate(45deg)</code>.</p> 
 
+<p>Here's where things get a bit tricky. Because of how the <a href="http://dev.w3.org/csswg/css3-transforms/#Rotate3dDefined">3D rotation matrix</a> gets calculated, a significantly larger input doesn't create a significantly deeper rotation. A transform of <code>rotate3d(1,1000,1,45deg)</code> renders differently from <code>rotate3d(1,100,1,45deg)</code> &#8212; but not by as much as you might expect.</p>
 
-<div class="note">
-<p>Here's the catch: larger numbers do not necessarily create a more exaggerated rotation. Using <code>rotate3d(1,1000,1,45deg)</code>, for example, won't create a more severe rotation around the x-axis than <code>rotate3d(1,100,1,45deg)</code> will.</p>
+<p>What's the deal? Once again, it's the matrix. Let's use <code>getComputedStyle()</code> here to illustrate the point. The equivalent matrix for <code>rotate3d(1,1000,1,45deg)</code> is as follows (values have been trimmed to 7 decimal places).
 
-<p>What's the deal? Once again, it's the matrix.</p>
+<pre><code>matrix3d(0.7071070, 0.0009999, -0.7071057, 0, -0.0004142, 0.9999994, 0.0009999, 0, 0.7071063, -0.0004142, 0.7071070, 0, 0, 0, 0, 1)</code></pre>
 
+<p>Compare that to the matrix of <code>rotate3d(1,100,1,45deg)</code>, shown below.</p>
 
+<pre><code>matrix3d(0.7071360, 0.0099987, -0.7070067, 0, -0.0041420, 0.9999414, 0.0099987, 0, 0.7070653, -0.0041420, 0.7071360, 0, 0, 0, 0, 1)</code></pre>
 
-
-
-
-<p>By manipulating each value in the <a href="3d-transforms-rotate3d.html"><code>rotate3d()</code></a> demo, you can get a sense of how they interplay.</p>
-</div>
-
-
-<!-- <p>For example, <code>rotate3d(1,100,1,45deg)</code> rotates the object more severely around the y axis than around either the x or z axes. But increasing the y value to 1000 won't create a significantly more severe rotation than a value of 100. Similarly, whenever the x, y, and z values are the same the effect is about what you'd get if each value were 1. Using <code>rotate3d(22,22,22,45deg)</code> or  <code>rotate3d(198,198,198,45deg)</code> produces the same visual effect as <code>rotate3d(1,1,1,45deg)</code>. (CHRIS - YEAH, SO PROPORTION VALUES. I THINK YOU SHOULD TRY TO SIMPLY THIS EXPLANATION A BIT.)</p> -->
-
+<p>As you can see, the largest difference between the two matrices are the fifth and tenth parameters. They're 10 times greater in the first matrix than the second, but the values are still small. As a result, when the matrix is applied, the effect is slightly, not wildly different. By manipulating each value in the <a href="3d-transforms-rotate3d.html"><code>rotate3d()</code></a> demo, you can get a better sense of how they interplay.</p>
 
 <h2>Learn More</h2>
 
